# ValidadorPelicano

./: README.md  TestStatusPelicano.py
Pelicano/: Funciones Validador Pel.cpp  StateMachine.cpp  StateMachine.hpp  main
Pelicano/Testing/: README  ValidatorPelicano.cpp  ValidatorPelicano.hpp  main.cpp
Pelicano/Testing/UnitTest_SelfCheck/: CMakeLists.txt  UnitTest_SelfCheck.cpp
Pelicano/Testing/UnitTest_StCleanBowl/: CMakeLists.txt  UnitTest_StCleanBowl.cpp
Pelicano/Testing/Unitest_CheckEventReset/: CMakeLists.txt  Unitest_CheckEventReset.cpp
Pelicano/Testing/Unitest_CheckOptoStates/: CMakeLists.txt  Unitest_CheckOptoStates.cpp
Pelicano/Testing/Unitest_CleanBowl/: CMakeLists.txt  Unitest_CleanBowl.cpp
Pelicano/Testing/Unitest_ResetDevice/: CMakeLists.txt  Unitest_ResetDevice.cpp
Pelicano/Testing/Unitest_SimplePoll/: CMakeLists.txt  Unitest_SimplePoll.cpp
Pelicano/Testing/Unitest_StCheck/: CMakeLists.txt  UnitTest_StCheck.cpp
Pelicano/Testing/Unitest_StConnect/: CMakeLists.txt  UnitTest_StConnect.cpp
Pelicano/Testing/Unitest_StEnable/: CMakeLists.txt  Unitest_StEnable.cpp
Pelicano/Testing/Unitest_StPolling/: CMakeLists.txt  Unitest_StPolling.cpp
Pelicano/Testing/Unitest_StReset/: CMakeLists.txt  Unitest_StReset.cpp
Pelicano/Testing/Unitest_StartMotor/: CMakeLists.txt  Unitest_StartMotor.cpp  compile.sh
Pelicano/Testing/Unitest_StopMotor/: CMakeLists.txt  Unitest_StError.cpp
